--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">printer-bluetooth</string>
+    <string name="type_here">Type here:</string>
+    <string name="open">Open</string>
+    <string name="send">Send</string>
+    <string name="close">Close</string>
 </resources>
